<resources>
    <string name="app_name">BookBuzz</string>
    <string name="search_button">Search</string>
    <string name="search_query_placeholder">Enter a book title, author, or ISBN...</string>
    <string name="wlcmmsg">Welcome to</string>
    <string name="title_activity_home2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="searchboxhint">Search By Books/Zipcode</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="booklist">My Booklist</string>
    <string name="wishlist">My Wishlist</string>
    <string name="view_all">View All</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">hello</string>
    <string name="aboutus1">The “Bookbuzz“ App project is an android application which will create a platform for exchanging, lending books to someone or borrowing books from someone in your neighborhood. The application’s main aim is to unite users on a platform that share a similar interest of reading and make it easier for them to borrow or lend books. In this application, users will register and login into the application and share their collection of books in the ‘Booklist’ through this app.
</string>
    <string name="about_us2">
        The users may also add the books of their favorite genre that they wish to read someday in the ‘Wishlist’. The users can view the other user’s Booklists and Wishlists i.e., the collection of books the user has and what he/she wishes to read. In this application if a user wishes to read one of the books possessed by another user, he/she can send request to them to discuss their meeting details for exchanging the books.
    </string>


    <string name="about_us3">The Bookbuzz App has been developed on Android platforms. The About Us option aims to provide
more information in detail about this application.</string>
    <string name="zipcode">Zipcode</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="biography">Biography</string>
    <string name="edit_text">Edit text</string>

</resources>