<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightbrinjal"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:layout_width="179dp"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/acme"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:text="ABOUT US"
                    android:textColor="@color/brinjal"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/biryani"
                    android:text="@string/aboutus1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginLeft="18dp"
                    android:textSize="14sp"
                    android:layout_marginRight="18dp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:fontFamily="@font/biryani"
                    android:text="@string/about_us2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_marginRight="18dp"
                    android:textSize="14sp"
                    android:layout_marginLeft="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="18dp"
                    android:fontFamily="@font/biryani"
                    android:text="@string/about_us3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
